--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 @import "tailwindcss";
 @plugin "daisyui";
+
+*{
+    font-family: "Oswald", sans-serif;
+}
